src/objects/LDC_Account__c.object
<CustomObject>
    <description>Object supports the individual local distribution accounts tied to a Customer.</description>
    <fields>
        <fullName>AMI_Meter__c</fullName>
        <label>AMI Meter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created for checking the Change in the Account Email.</description>
        <label>Account Email Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>This field is created during the iAve Conversion process.</description>
        <label>Account Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Type_Code__c</fullName>
        <label>Account Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RETAIL_STANDALONE</fullName>
                </value>
                <value>
                    <fullName>RETAIL_SUBACCT</fullName>
                </value>
                <value>
                    <fullName>WHOLESALE</fullName>
                </value>
                <value>
                    <fullName>FLOW_THROUGH</fullName>
                </value>
                <value>
                    <fullName>UCBNONPOR_RR</fullName>
                </value>
                <value>
                    <fullName>UCBPOR_RR</fullName>
                </value>
                <value>
                    <fullName>RETAIL_FRIEND</fullName>
                </value>
                <value>
                    <fullName>UCBPOR_BR</fullName>
                </value>
                <value>
                    <fullName>UCBNONPOR_BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LDC Accounts (Account)</relationshipLabel>
        <relationshipName>LDC_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Acct_ADU__c</fullName>
        <label>Acct ADU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acct_Annual_Usage__c</fullName>
        <label>Acct Annual Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acct__c</fullName>
        <label>Acct Profile Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Days__c</fullName>
        <formula>Alert_Expires__c  -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alert_Description__c</fullName>
        <label>Alert Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Expires__c</fullName>
        <label>Alert Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alias_Name__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Alias Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Cycle__c</fullName>
        <label>Bill Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>62</fullName>
                </value>
                <value>
                    <fullName>63</fullName>
                </value>
                <value>
                    <fullName>64</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>66</fullName>
                </value>
                <value>
                    <fullName>67</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Method__c</fullName>
        <label>Bill Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DUAL</fullName>
                </value>
                <value>
                    <fullName>Rate Ready</fullName>
                </value>
                <value>
                    <fullName>Bill Ready</fullName>
                </value>
                <value>
                    <fullName>SBO/ESP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_2__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Billing Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_3__c</fullName>
        <description>This field is created during the iAve Conversion.</description>
        <label>Billing Address Line 3 (ICO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <description>This Field is created during iAve Conversion to store the Billing City</description>
        <label>Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <description>This Field is created during iAve Conversion to store the Billing Country</description>
        <label>Billing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Group</label>
        <referenceTo>Billing_Group__c</referenceTo>
        <relationshipLabel>LDC Accounts</relationshipLabel>
        <relationshipName>LDC_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <description>This Field is created during iAve Conversion to store the Billing State/Province</description>
        <label>Billing State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <description>This Field is created during iAve Conversion to store the Billing Street</description>
        <label>Billing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_code__c</fullName>
        <description>This Field is created during iAve Conversion to store the Billing Zip/Postal code</description>
        <label>Billing Zip/Postal code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>By_Pass_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By Pass Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Id__c</fullName>
        <externalId>true</externalId>
        <label>CRM ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Capacity_Obligation_Quantity__c</fullName>
        <label>Capacity Obligation Quantity</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_PLC1_End_Date__c</fullName>
        <label>Capacity PLC1 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capacity_PLC1_Start_Date__c</fullName>
        <label>Capacity PLC1 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capacity_PLC1__c</fullName>
        <label>Capacity PLC1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_PLC2_End__c</fullName>
        <label>Capacity PLC2 End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capacity_PLC2_Start__c</fullName>
        <label>Capacity PLC2 Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capacity_PLC2__c</fullName>
        <label>Capacity PLC2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>Commodity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electric</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Identification_Number__c</fullName>
        <description>this field is added to store the Customer_Identification_Number</description>
        <label>Customer_Identification_Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Key__c</fullName>
        <label>Customer Key</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DASR_Comments__c</fullName>
        <label>DASR Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DUNSLDC__c</fullName>
        <description>This field serves as an external ID key field which contains both DUNS# and LDC account number</description>
        <externalId>true</externalId>
        <label>DUNSLDC</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Utility_Link__c</fullName>
        <label>Data Utility Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Delivery_Service_Class__c</fullName>
        <label>Delivery Service Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Voltage__c</fullName>
        <label>Delivery Voltage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Off_Cycle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drop Off Cycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESP_Account_Number__c</fullName>
        <label>ESP Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_Load_Percentage__c</fullName>
        <description>This field is added to store the Eligible Load Percentage</description>
        <label>Eligible Load Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_Switch_Date__c</fullName>
        <label>Eligible Switch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <description>Date on to send for Enrollment</description>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Sent_Date__c</fullName>
        <label>Enrollment Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Status__c</fullName>
        <description>Status of the enrollment</description>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Ready</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Output_Rating__c</fullName>
        <description>This field is added to store the Equipment Output Rating for PA</description>
        <label>Equipment Output Rating</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <description>This field is created during the iAve Conversion.</description>
        <label>FIPS Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FRM_Profile__c</fullName>
        <label>FRM Profile</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generator_Located_Onsite__c</fullName>
        <description>This field is created during the iAve Conversion for the net Metering</description>
        <label>Generator Located Onsite</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Null</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generator_Size__c</fullName>
        <description>This field is created during the iAve Conversion for the Net Metering</description>
        <inlineHelpText>Generator size in kilowatts</inlineHelpText>
        <label>Generator Size kw</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generator_Type__c</fullName>
        <description>This field is created for the handling Net metering</description>
        <label>Generator Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
                <value>
                    <fullName>Biomass</fullName>
                </value>
                <value>
                    <fullName>Landfill Gas</fullName>
                </value>
                <value>
                    <fullName>Hydropower</fullName>
                </value>
                <value>
                    <fullName>Microturbine</fullName>
                </value>
                <value>
                    <fullName>Fuel Cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grace_CD__c</fullName>
        <description>This field is created for iAve Conversion.</description>
        <label>Grace CD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PCX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IFF__c</fullName>
        <formula>IF( Service_Street_1__c =&apos;&apos;,&apos;&apos;, &apos;,&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF__c</fullName>
        <formula>IF( Service_City__c =&apos;&apos;,&apos;&apos;, &apos;,&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interval_Data_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interval Data Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interval_Usage__c</fullName>
        <label>Interval Usage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interval</fullName>
                </value>
                <value>
                    <fullName>Summary</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Record_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Record updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Comments__c</fullName>
        <label>LDC Account Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>LDC Account Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Status__c</fullName>
        <description>Status Values for overall LDC Account</description>
        <inlineHelpText>Status of the LDC Account</inlineHelpText>
        <label>LDC Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW_ACCOUNT</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>FINAL</fullName>
                </value>
                <value>
                    <fullName>PENDING_FINAL</fullName>
                </value>
                <value>
                    <fullName>PENDING_ENROLLMENT</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
                <value>
                    <fullName>DRAFT</fullName>
                </value>
                <value>
                    <fullName>NEVER_SERVED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDC_Account_Utility__c</fullName>
        <description>Needs to be deleted. Apex class in use.</description>
        <label>LDC Account Utility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AEP</fullName>
                </value>
                <value>
                    <fullName>Ameren</fullName>
                </value>
                <value>
                    <fullName>Comed</fullName>
                </value>
                <value>
                    <fullName>DEO</fullName>
                </value>
                <value>
                    <fullName>DPL</fullName>
                </value>
                <value>
                    <fullName>FE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDC_Budget_Billing_Status__c</fullName>
        <description>This field is added to store the LDC Budget Billing Status</description>
        <label>LDC Budget Billing Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_End_Date__c</fullName>
        <description>End Date for the LDC</description>
        <label>LDC End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LDC_Receive_Invoices_By__c</fullName>
        <description>This field is created during the iAve Conversion Process.</description>
        <label>LDC Receive Invoices By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Online Notice</fullName>
                </value>
                <value>
                    <fullName>EMail &amp; Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDC_Start_Date__c</fullName>
        <description>Start Date of the LDC</description>
        <label>LDC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LDC_Type__c</fullName>
        <label>LDC Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Flow Through</fullName>
                </value>
                <value>
                    <fullName>Governmental</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDC_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Utility Provider</description>
        <label>LDC Vendor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>LDC Account&apos;s Service Territory doesn&apos;t match with the LDC Vendor&apos;s Service Territory</errorMessage>
            <filterItems>
                <field>LDC_Vendor__c.Service_Territory__c</field>
                <operation>equals</operation>
                <valueField>$Source.Service_Territory__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LDC_Vendor__c</referenceTo>
        <relationshipLabel>LDC Accounts</relationshipLabel>
        <relationshipName>LDC_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastSent_to_Lodestar__c</fullName>
        <label>Last Sent to Lodestar</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_LS_Response__c</fullName>
        <label>Last LS Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Sent_to_LoadStar__c</fullName>
        <label>Last Sent to Lodestar</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoadStar_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the field is checked, it indicated LoadStar is executed.</description>
        <label>Lodestar Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Data_Acquisition_Type__c</fullName>
        <label>Load Data Acquisition Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C&amp;I</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Amendment (Auto/Manual)</fullName>
                </value>
                <value>
                    <fullName>Muni-Agg</fullName>
                </value>
                <value>
                    <fullName>Res-Direct (Manual)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Load_Days__c</fullName>
        <label>Load Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load_Factor_Energy__c</fullName>
        <label>Load Factor Energy</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Load_Retrieval_Date__c</fullName>
        <label>Load Retrieval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LodeStar_Response__c</fullName>
        <label>LodeStar Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lodestar_History__c</fullName>
        <label>Lodestar History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Demand__c</fullName>
        <label>Max Demand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Generators__c</fullName>
        <description>This field is created during the iAve conversion</description>
        <label>Multiple Generators</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Null</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - 1</fullName>
                </value>
                <value>
                    <fullName>Yes - 2</fullName>
                </value>
                <value>
                    <fullName>Yes - 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NSPL1_End_Date__c</fullName>
        <label>NSPL1 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NSPL1_KW__c</fullName>
        <label>NSPL1 KW</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSPL1_Start_Date__c</fullName>
        <label>NSPL1 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NSPL2_End_Date__c</fullName>
        <label>NSPL2 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NSPL2_KW__c</fullName>
        <label>NSPL2 KW</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSPL2_Start_Date__c</fullName>
        <label>NSPL2 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NSPL_Load_Factor__c</fullName>
        <label>NSPL Load Factor</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Meter_Type__c</fullName>
        <description>This field is created during the iAve conversion for storing the net metering indicator.</description>
        <label>Net Meter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NM-BI</fullName>
                </value>
                <value>
                    <fullName>NM-GG</fullName>
                </value>
                <value>
                    <fullName>NM-GL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Metering__c</fullName>
        <description>This field is created during the iAve conversion for the net metering</description>
        <label>Net Metering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending- See Notes</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Utility Declined</fullName>
                </value>
                <value>
                    <fullName>Dynegy Declined</fullName>
                </value>
                <value>
                    <fullName>Null</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending- Application Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Pending- Application Sent to Utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Off_Pk_Kwh__c</fullName>
        <label>Off Pk Kwh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_LDC_Account_Number__c</fullName>
        <label>Old LDC Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_PK_Kwh__c</fullName>
        <label>On PK Kwh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Period_Ends__c</fullName>
        <description>This field is created to store the Opt out period date and used in the iAve conversion</description>
        <label>Opt Out Period Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLC_Load_Factor__c</fullName>
        <label>PLC Load Factor</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Participating_Interest_Percent__c</fullName>
        <description>This field is added to store the  Participating Interest Percent for PA</description>
        <label>Participating Interest Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participation_Status_Date__c</fullName>
        <description>This field is created to store the users who updates the Opt Out Process and used in the iAve conversion</description>
        <label>Opt Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Participation_Status_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to store the users who updates the Opt Out Process and used in the iAve conversion</description>
        <label>Opt Out By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LDC_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>